added computation stages
